--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "你来到了没有知识的荒原 :("
+description: "链接失效了,如果非常想看的话,选择下面的方式联系我修改 :>"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
