--- a/404.html
+++ b/404.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: 404
+title: 
 hide-in-nav: true
-description: "链接失效了,如果非常想看的话,选择下面的方式联系我修改 :>"
+description: "链接失效了,如果非常想看的话,选择下面的方式联系我修改 :)"
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
