--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: 404
 hide-in-nav: true
-description: "链接失效了,请选择下面的方式联系我修改 :)"
+description: ""
 header-img: "img/404-bg.jpg"
 permalink: /404.html
 ---
