--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ description: "「生活不止眼前的苟且 还有诗与远方 ...」"
 header-img: "img/bg-me-2022.jpg"
 header-mask: 0.1
 multilingual: true
+date: 2019-08-13 09:39:50
 ---
 
 {% include multilingual-sel.html %}
